lab1/Test/L1-A-6-12.output
Error Type B at Line 1
Error Type A at Line 8
Error Type B at Line 10
Error Type A at Line 11
Error Type B at Line 13
Error Type B at Line 14
Error Type A at Line 15
Error Type B at Line 18
