lab1/Test/L1-A-6-12.cmm
int gWsnbHio8 [ 396589210 ] [ ] , nso4pCdirdfIAbbds8fk 
  , E7ry6GQt9c2fOEjdqLzi 


;
struct i4BXjsd {
  float izJgLMg = wqHSmG9L1cDybp ( ) - z8W5yrimPoe91nz 
    - j69uyw #== Yg2xQkAg3NHk > yyCF && KhTGEzY || TO0y53f8KsfDWnBq 
    ;
}FQ1rcRfTpg5Ek8Hf54R ( {
  float b [ @193666584 ] ;
  if ( - grO5szez1ZQIbprgfd67 - n22wQ6tsUF - fDXtTnJT 
    == lZd7N_mNxJjKqNp <= pDqc2tg && nk6g || )   dWCdg5U 
    < ;
else   jTz8CdSryKUgL ;'

}
zPKfYm 